--- a/PROGRAMMER/css/randomcall.css
+++ b/PROGRAMMER/css/randomcall.css
@@ -144,6 +144,7 @@ input {
     left: 20px;
 }
 
+.mdui-dialog,
 .mdui-dialog-alert {
     border-radius: 20px;
     height: none !important;
@@ -152,6 +153,7 @@ input {
 .mdui-snackbar {
     margin-top: 5px;
     border-radius: 4px;
+    z-index: 9999;
 }
 
 .mdui-dialog>.mdui-dialog-title {
@@ -371,6 +373,8 @@ body.mdui-loaded .mdui-drawer {
 .mdui-snackbar {
     margin-top: 5px;
     border-radius: 4px;
+    color: white !important;
+
 }
 
 .mdui-dialog>.mdui-dialog-title {
@@ -584,7 +588,7 @@ body.mdui-loaded .mdui-drawer {
     top: 2px;
 }
 
-.启动图{
+.启动图 {
     text-align: center;
     font-size: 38px;
     margin-top: 33vh;
