--- a/PROGRAMMER/css/theme/light.css
+++ b/PROGRAMMER/css/theme/light.css
@@ -1,5 +1,4 @@
 @import url(/PROGRAMMER/css/theme/Colormixer/tokens.css);
-
 body {
   background-color: var(--md-ref-palette-primary99);
 }
@@ -75,7 +74,7 @@ input {
   background-color: rgba(0, 19, 86, 0.133);
 }
 
-.mdui-dialog-actions>a {
+.mdui-dialog-actions .mdui-btn {
   background: #fbf8ff;
   color: #95a6fd !important;
 }
@@ -233,11 +232,11 @@ input {
   background: var(--md-ref-palette-primary99);
 }
 
-.启动图{
-    text-align: center;
-    font-size: 38px;
-    margin-top: 33vh;
-    animation-iteration-count: infinite;
-    text-shadow: 2px 2px 20px #2646685c;
-    font-weight: bold;
+.启动图 {
+  text-align: center;
+  font-size: 38px;
+  margin-top: 33vh;
+  animation-iteration-count: infinite;
+  text-shadow: 2px 2px 20px #2646685c;
+  font-weight: bold;
 }
